hubSide/force-app/main/default/objects/Piece_justificative_Sinistre__c/Piece_justificative_Sinistre__c.object-meta.xml
<CustomObject>
    <label>Pièce justificative Sinistre</label>
    <nameField>
        <label>Pièce justificative Sinistre Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pièces justificatives Sinistre</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>