hubSide/force-app/main/default/objects/Piece_justificative_Sinistre__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Technique Sinistre</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Pièces justificatives Sinistre</relationshipLabel>
    <relationshipName>Pieces_justificatives_Sinistre</relationshipName>
    <type>Lookup</type>
</CustomField>