hubSide/force-app/main/default/objects/Piece_justificative_Sinistre__c/fields/Commentaire__c.field-meta.xml
<CustomField>
    <fullName>Commentaire__c</fullName>
    <description>Commentaire sur le statut de la pièce justificative fournie.</description>
    <label>Commentaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>