hubSide/force-app/main/default/objects/Piece_justificative_Sinistre__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description>Store the Id of the object ContentDocument when a file is uploaded in ContentVersion and ContentDocument by the Web or Salesforce in order to get the Id immediately without traversing all relationship until ContentDocument</description>
    <label>ContentDocumentId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>