hubSide/force-app/main/default/objects/Piece_justificative_Sinistre__c/fields/ContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionId__c</fullName>
    <description>Store the Id of the object ContentVersion when a file is uploaded in ContentVersion by the Web or Salesforce in order to get the Id immediately without traversing all relationship until ContentVersion</description>
    <label>ContentVersionId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>