hubSide/force-app/main/default/objects/Piece_justificative_Sinistre__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Document__c.Related_sinistre__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Pièces justificatives Sinistre</relationshipLabel>
    <relationshipName>Pieces_justificatives_Sinistre</relationshipName>
    <type>Lookup</type>
</CustomField>