hubSide/force-app/main/default/objects/Piece_justificative_Sinistre__c/fields/LongTitle__c.field-meta.xml
<CustomField>
    <fullName>LongTitle__c</fullName>
    <description>Intitulé complet de la pièce justificative à destination des communications clients</description>
    <label>Intitulé</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>