hubSide/force-app/main/default/objects/Piece_justificative_Sinistre__c/fields/NoTradable__c.field-meta.xml
<CustomField>
    <fullName>NoTradable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non négociable</label>
    <type>Checkbox</type>
</CustomField>