hubSide/force-app/main/default/objects/Piece_justificative_Sinistre__c/fields/Types_piece_justificative__c.field-meta.xml
<CustomField>
    <fullName>Types_piece_justificative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Types pièce justificative</label>
    <referenceTo>Types_piece_justificative__c</referenceTo>
    <relationshipLabel>Pièces justificatives Sinistre</relationshipLabel>
    <relationshipName>Pieces_justificatives_Sinistre</relationshipName>
    <type>Lookup</type>
</CustomField>