hubSide/force-app/main/default/objects/Piece_justificative_Sinistre__c/fields/ValidationDate__c.field-meta.xml
<CustomField>
    <fullName>ValidationDate__c</fullName>
    <description>Date à laquelle la pièce justificative a été considérée valide - Field saving the date when the Piece justificative was marked as valid</description>
    <label>Date de validation</label>
    <type>Date</type>
</CustomField>