hubSide/force-app/main/default/objects/Piece_justificative_Sinistre__c/fields/Valideur__c.field-meta.xml
<CustomField>
    <fullName>Valideur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Personne ayant validé le document</description>
    <label>Valideur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pieces_justificatives_Sinistre</relationshipName>
    <type>Lookup</type>
</CustomField>