hubSide/force-app/main/default/objects/Piece_justificative_Sinistre__c/fields/Validite_document__c.field-meta.xml
<CustomField>
    <fullName>Validite_document__c</fullName>
    <label>Validité du document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expected</fullName>
                <default>true</default>
                <label>1-Attendue</label>
            </value>
            <value>
                <fullName>Received</fullName>
                <label>2-Reçu</label>
            </value>
            <value>
                <fullName>Valid</fullName>
                <label>3-Valide</label>
            </value>
            <value>
                <fullName>NotNeeded</fullName>
                <label>4-Plus réclamé</label>
            </value>
            <value>
                <fullName>Invalid</fullName>
                <label>5-Non valide</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>