hubSide/force-app/main/default/objects/Piece_justificative_Sinistre__c/validationRules/GS_ADM_cannot_edit_name.validationRule-meta.xml
<ValidationRule>
    <fullName>GS_ADM_cannot_edit_name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Name ),
OR(
$Profile.Name = &quot;SFAM GS&quot;,
CONTAINS(TEXT($User.BusinessProfile__c), &quot;ADM&quot;)
))</errorConditionFormula>
    <errorMessage>Vous n&apos;avez pas le droit de modifier le nom de la pièce justificative.</errorMessage>
</ValidationRule>